# netunicorn-connector-salt

./: .gitignore  README.md  configuration-example.yaml  pyproject.toml
.github/workflows/: release.yml
src/netunicorn/director/infrastructure/connectors/: salt_connector.py
